--- a/UniversalTicketTracker/.classpath
+++ b/UniversalTicketTracker/.classpath
@@ -14,5 +14,23 @@
 	<classpathentry kind="lib" path="/Users/ctrummer/programme/eclipse/plugins/org.eclipse.ui.workbench_3.103.1.v20120906-120042.jar" sourcepath="/Users/ctrummer/programme/eclipse/plugins/org.eclipse.ui.workbench_3.103.1.v20120906-120042.jar"/>
 	<classpathentry kind="lib" path="/Users/ctrummer/programme/eclipse/plugins/com.ibm.icu_4.4.2.v20110823.jar" sourcepath="/Users/ctrummer/programme/eclipse/plugins/com.ibm.icu_4.4.2.v20110823.jar"/>
 	<classpathentry kind="lib" path="/Users/ctrummer/programme/eclipse/plugins/org.eclipse.ui.forms_3.5.200.v20120705-114351.jar" sourcepath="/Users/ctrummer/programme/eclipse/plugins/org.eclipse.ui.forms_3.5.200.v20120705-114351.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derby.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyclient.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_cs.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_de_DE.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_es.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_fr.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_hu.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_it.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_ja_JP.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_ko_KR.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_pl.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_pt_BR.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_ru.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_zh_CN.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyLocale_zh_TW.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbynet.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbyrun.jar"/>
+	<classpathentry kind="lib" path="/Users/ctrummer/programme/derby/lib/derbytools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
