--- a/ActiveMQTest/.classpath
+++ b/ActiveMQTest/.classpath
@@ -3,15 +3,17 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib_hornet/hornetq-commons-2.4.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-core-client-2.4.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-client-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-core-client-2.4.0.Final.jar" sourcepath="C:/Users/ctr/.m2/repository/org/hornetq/hornetq-core-client/2.4.0.Final/hornetq-core-client-2.4.0.Final-sources.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-client-2.4.0.Final.jar" sourcepath="C:/Users/ctr/.m2/repository/org/hornetq/hornetq-jms-client/2.4.0.Final/hornetq-jms-client-2.4.0.Final-sources.jar"/>
 	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-examples-common-2.4.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib_hornet/hornetq-journal-2.4.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib_hornet/hornetq-native-2.4.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib_hornet/javax.inject-1.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/jboss-jms-api_2.0_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/jboss-jms-api_2.0_spec-1.0.0.Final.jar" sourcepath="C:/Users/ctr/.m2/repository/org/jboss/spec/javax/jms/jboss-jms-api_2.0_spec/1.0.0.Final/jboss-jms-api_2.0_spec-1.0.0.Final-sources.jar"/>
 	<classpathentry kind="lib" path="lib_hornet/jboss-logging-3.1.0.GA.jar"/>
 	<classpathentry kind="lib" path="lib_hornet/jgroups-3.3.4.Final.jar"/>
 	<classpathentry kind="lib" path="lib_hornet/netty-all-4.0.13.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-server-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-server-2.4.0.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
