--- a/ActiveMQTest/.classpath
+++ b/ActiveMQTest/.classpath
@@ -2,18 +2,21 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-commons-2.4.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-core-client-2.4.0.Final.jar" sourcepath="C:/Users/ctr/.m2/repository/org/hornetq/hornetq-core-client/2.4.0.Final/hornetq-core-client-2.4.0.Final-sources.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-client-2.4.0.Final.jar" sourcepath="C:/Users/ctr/.m2/repository/org/hornetq/hornetq-jms-client/2.4.0.Final/hornetq-jms-client-2.4.0.Final-sources.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-examples-common-2.4.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-journal-2.4.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-native-2.4.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/javax.inject-1.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/jboss-jms-api_2.0_spec-1.0.0.Final.jar" sourcepath="C:/Users/ctr/.m2/repository/org/jboss/spec/javax/jms/jboss-jms-api_2.0_spec/1.0.0.Final/jboss-jms-api_2.0_spec-1.0.0.Final-sources.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/jboss-logging-3.1.0.GA.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/jgroups-3.3.4.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/netty-all-4.0.13.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-server-2.4.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-server-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/jopt-simple-3.2.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1-javadoc.jar.asc"/>
+	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1-scaladoc.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1-scaladoc.jar.asc"/>
+	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1-sources.jar.asc"/>
+	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1.jar.asc"/>
+	<classpathentry kind="lib" path="lib_kafka/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/metrics-core-2.2.0.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/scala-library-2.8.0.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/snappy-java-1.0.5.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/zkclient-0.3.jar"/>
+	<classpathentry kind="lib" path="lib_kafka/zookeeper-3.3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
