--- a/ActiveMQTest/.classpath
+++ b/ActiveMQTest/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="lib/geronimo-jms_1.1_spec-1.1.jar" sourcepath="C:/Users/ctr/.m2/repository/org/apache/geronimo/specs/geronimo-jms_1.1_spec/1.1/geronimo-jms_1.1_spec-1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-client-0.26.jar"/>
+	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-client-jms-0.26.jar"/>
+	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-common-0.26.jar"/>
 	<classpathentry kind="lib" path="lib_kafka/jopt-simple-3.2.jar"/>
 	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1.jar" sourcepath="lib_kafka/src">
 		<attributes>
