--- a/ActiveMQTest/.classpath
+++ b/ActiveMQTest/.classpath
@@ -2,22 +2,18 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="lib/geronimo-jms_1.1_spec-1.1.jar" sourcepath="C:/Users/ctr/.m2/repository/org/apache/geronimo/specs/geronimo-jms_1.1_spec/1.1/geronimo-jms_1.1_spec-1.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-client-0.26.jar"/>
-	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-client-jms-0.26.jar"/>
-	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-common-0.26.jar"/>
-	<classpathentry kind="lib" path="lib_kafka/jopt-simple-3.2.jar"/>
-	<classpathentry kind="lib" path="lib_kafka/kafka_2.8.0-0.8.1.1.jar" sourcepath="lib_kafka/src">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Users/ctr/git/projects/ActiveMQTest/lib_kafka/doc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib_kafka/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="lib_kafka/metrics-core-2.2.0.jar"/>
-	<classpathentry kind="lib" path="lib_kafka/scala-library-2.8.0.jar" sourcepath="C:/Users/ctr/.m2/repository/org/scala-lang/scala-library/2.8.0/scala-library-2.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="lib_kafka/slf4j-api-1.7.2.jar"/>
-	<classpathentry kind="lib" path="lib_kafka/snappy-java-1.0.5.jar"/>
-	<classpathentry kind="lib" path="lib_kafka/zkclient-0.3.jar"/>
-	<classpathentry kind="lib" path="lib_kafka/zookeeper-3.3.4.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-commons-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-core-client-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-client-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-examples-common-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-jms-server-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-journal-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-native-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/hornetq-server-2.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/jboss-jms-api_2.0_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/jboss-logging-3.1.0.GA.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/jgroups-3.3.4.Final.jar"/>
+	<classpathentry kind="lib" path="lib_hornet/netty-all-4.0.13.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
