--- a/ActiveMQTest/.classpath
+++ b/ActiveMQTest/.classpath
@@ -2,7 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="lib_openmq/imq.jar"/>
-	<classpathentry kind="lib" path="lib_openmq/jms.jar" sourcepath="C:/Users/ctr/.m2/repository/javax/jms/javax.jms-api/2.0/javax.jms-api-2.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/geronimo-jms_1.1_spec-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-client-0.26.jar"/>
+	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-client-jms-0.26.jar"/>
+	<classpathentry kind="lib" path="lib/qpid-amqp-1-0-common-0.26.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
