--- a/JavaRestart/pom.xml
+++ b/JavaRestart/pom.xml
@@ -5,8 +5,29 @@
   <version>0.0.1</version>
   <name>test</name>
   <description>test</description>
+  <packaging>war</packaging>
+  
+  
+  <build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
   
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-servlet-api -->
+		<dependency>
+		    <groupId>org.apache.tomcat</groupId>
+		    <artifactId>tomcat-servlet-api</artifactId>
+		    <version>9.0.14</version>
+		</dependency>
+		
 	  	<dependency>
 		    <groupId>org.junit.jupiter</groupId>
 		    <artifactId>junit-jupiter-api</artifactId>
@@ -49,4 +70,5 @@
   		     <version>2.11.1</version>
   		 </dependency>
   </dependencies>
+  
 </project>
