--- a/JavaRestart/pom.xml
+++ b/JavaRestart/pom.xml
@@ -27,6 +27,12 @@
 		    <artifactId>tomcat-servlet-api</artifactId>
 		    <version>9.0.14</version>
 		</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.myfaces.core/myfaces-api -->
+		<dependency>
+		    <groupId>org.apache.myfaces.core</groupId>
+		    <artifactId>myfaces-api</artifactId>
+		    <version>2.3.2</version>
+		</dependency>
 		
 	  	<dependency>
 		    <groupId>org.junit.jupiter</groupId>
