--- a/JavaRestart/pom.xml
+++ b/JavaRestart/pom.xml
@@ -17,6 +17,27 @@
                 <target>1.11</target>
             </configuration>
         </plugin>
+        
+        
+        <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>HelloFX</mainClass>
+        </configuration>
+</plugin>
+        
+        
+        
+        
     </plugins>
 </build>
   
@@ -75,6 +96,15 @@
    			 <artifactId>log4j-core</artifactId>
   		     <version>2.11.1</version>
   		 </dependency>
+  		 
+  		 
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>11.0.2</version>
+    </dependency>
+
+  		 
   </dependencies>
   
 </project>
